--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -14,7 +14,7 @@
     width: 50px;
 
     &:hover {
-      background-color: $elv-color-darkgray;
+      background-color: $color-background-active;
     }
   }
 
