--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -1,81 +1,124 @@
-.entry-container {
-  padding: $elv-spacing-s;
-
-  h4 {
-    color: $color-text;
-    font-weight: 500;
-    margin: 0 0 $elv-spacing-s;
-    min-width: 200px;
-    padding: 0;
-    word-wrap: normal;
-  }
-}
-
-.entry {
-  display: grid;
-  font-size: $font-s;
-  grid-row-gap: $elv-spacing-xxs;
-
-  grid-template-columns: 120px 1fr;
-
-  label {
-    color: $color-foreground;
-    grid-column: 1;
-  }
-
-  div {
-    grid-column: 2;
-  }
-}
-
-.entry-actions {
-  align-items: center;
+.entries-container {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-
-  .entry-page {
-    @include elv-no-select;
-    color: $elv-color-text-lighter;
-    flex: 1 1 0;
-    font-size: $font-s;
-    min-width: 4em;
-    text-align: center;
-  }
-
-  .entry-page-button {
-    flex: 1 1 0;
-    min-width: 90px;
-
-    &.entry-page-button {
-      background-color: $elv-color-darkgray;
-      border-color: $elv-color-darkgray;
-      border-radius: 0;
-    }
-
-    &:disabled {
-      visibility: hidden;
-    }
-  }
-
-  &.bottom-actions {
-    justify-content: center;
-  }
-}
-
-.entry-time {
-  font-size: $font-s;
-  margin-top: $elv-spacing-xs;
+  flex-direction: column;
+  height: 100%;
   text-align: center;
-}
-
-.entry-header {
-  align-items: center;
-  display: flex;
-  margin-bottom: $elv-spacing-s;
 
   h4 {
     margin: 0;
-    padding: 0;
+  }
+
+  .entries-header {
+    background-color: $color-background-active;
+    padding: $elv-spacing-s 0;
+  }
+
+  .entries-time-range {
+    color: $elv-color-text-lighter;
+    font-size: $font-s;
+  }
+
+  .entries {
+    flex-grow: 1;
+    max-height: 100%;
+    overflow-y: scroll;
+  }
+
+  .entry-time-range {
+    color: $elv-color-text-light;
+  }
+
+  .load-entries-button {
+    align-items: center;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .entry {
+    @include elv-no-select;
+    align-items: center;
+    border-bottom: 1px solid $color-border;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    font-size: $font-s;
+    justify-content: center;
+    min-height: 3.5rem;
+    padding: $elv-spacing-xs;
+    position: relative;
+    text-align: center;
+
+    &.entry-hover,
+    &:hover {
+      background-color: $color-background-active;
+    }
+
+    &.entry-active {
+      background-color: $color-accent;
+
+      .entry-time-range {
+        color: $elv-color-text-white;
+      }
+    }
+
+    &:not(.entry-active) {
+      .entry-play-icon {
+        &:hover {
+          fill: $color-accent;
+        }
+      }
+    }
+  }
+
+  .entry-play-icon {
+    fill: $elv-color-white;
+    padding: $elv-spacing-xs;
+    position: absolute;
+    right: 0;
+    top: 0;
+
+    svg {
+      height: $font-m;
+      width: $font-m;
+    }
+  }
+
+  .entry-actions {
+    align-items: center;
+    border-bottom: 1px solid $color-border;
+    display: flex;
+    margin-top: 7px;
+    padding: $elv-spacing-xs $elv-spacing-s;
+
+    .back-button {
+      margin-right: $elv-spacing-xs;
+    }
+  }
+}
+
+.entry-container {
+  padding: $elv-spacing-ss $elv-spacing-s;
+  text-align: left;
+
+  .entry-details {
+    display: grid;
+    grid-row-gap: $elv-spacing-xxs;
+    grid-template-columns: 8rem 2fr;
+
+    label {
+      color: $elv-color-text-lighter;
+    }
+  }
+
+  .entry-play,
+  .entry-back {
+    margin-bottom: $elv-spacing-s;
+  }
+
+  .entry-back {
+    align-items: center;
+    display: flex;
   }
 }
