--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -32,7 +32,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 10000;
+    z-index: 100;
   }
 
   video {
@@ -187,6 +187,10 @@
 
     svg {
       stroke: $color-foreground;
+
+      &:hover {
+        stroke: $color-accent;
+      }
     }
   }
 
