--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -13,6 +13,19 @@
     padding: $elv-spacing-s 0;
   }
 
+  .entries-filter {
+    height: 2rem;
+
+    input {
+      background-color: $elv-color-black;
+      border: 1px solid $elv-color-black;
+      color: $elv-color-text-lightest;
+      font-size: $font-l;
+      padding: 0 $elv-spacing-xs;
+      width: 100%;
+    }
+  }
+
   .entries-time-range {
     color: $elv-color-text-lighter;
     font-size: $font-s;
