--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -14,21 +14,20 @@
   }
 
   .entries-filter {
-    height: 2rem;
-
     input {
       background-color: $elv-color-black;
       border: 1px solid $elv-color-black;
       color: $elv-color-text-lightest;
-      font-size: $font-l;
+      font-size: $elv-font-l;
       padding: 0 $elv-spacing-xs;
       width: 100%;
+      height: 2.0rem;
     }
   }
 
   .entries-time-range {
     color: $elv-color-text-lighter;
-    font-size: $font-s;
+    font-size: $elv-font-s;
   }
 
   .entries {
@@ -56,7 +55,7 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    font-size: $font-s;
+    font-size: $elv-font-s;
     justify-content: center;
     min-height: 3.5rem;
     padding: $elv-spacing-xs;
@@ -93,8 +92,8 @@
     top: 0;
 
     svg {
-      height: $font-m;
-      width: $font-m;
+      height: $elv-font-m;
+      width: $elv-font-m;
     }
   }
 
@@ -102,7 +101,6 @@
     align-items: center;
     border-bottom: 1px solid $color-border;
     display: flex;
-    margin-top: 7px;
     padding: $elv-spacing-xs $elv-spacing-s;
 
     .back-button {
@@ -115,23 +113,61 @@
   padding: $elv-spacing-ss $elv-spacing-s;
   text-align: left;
 
+  .entry-edit-button {
+    margin-top: $elv-spacing-s;
+    width: 10rem;
+  }
+
   .entry-details {
     display: grid;
     grid-row-gap: $elv-spacing-xxs;
+    align-items: center;
     grid-template-columns: 8rem 2fr;
+    width: 100%;
 
     label {
       color: $elv-color-text-lighter;
     }
+
+    input {
+      background-color: $color-background-active;
+      border: $color-border;
+      color: $color-text;
+      font-size: $elv-font-m;
+    }
   }
 
-  .entry-play,
-  .entry-back {
-    margin-bottom: $elv-spacing-s;
-  }
-
-  .entry-back {
+  .entry-actions-container {
     align-items: center;
     display: flex;
+    margin-bottom: $elv-spacing-s;
+
+    .back-button {
+      margin-right: $elv-spacing-xs;
+    }
+  }
+
+  .entry-actions {
+    align-items: center;
+    border: 0;
+    display: flex;
+    flex-grow: 1;
+    padding: 0;
+
+    button {
+      flex: 1 1;
+      margin-right: $elv-spacing-xs;
+      max-width: 40%;
+      padding: $elv-spacing-mxs;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    .back-button {
+      flex-grow: 0;
+      margin-right: 2rem;
+    }
   }
 }
