--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -1,3 +1,6 @@
+$track-height: 3rem;
+$audio-track-height: 5rem;
+
 .tracks-container {
   position: relative;
   width: 100%;
@@ -20,19 +23,11 @@
   }
 }
 
-.track-container {
-  display: flex;
-
-  canvas {
-    cursor: pointer;
-  }
-}
-
 .track-lane {
   border-bottom: 1px solid $color-border;
   display: grid;
   grid-template-columns: 13rem 1fr;
-  height: 2.5rem;
+  height: $track-height;
 
   &:first-child,
   &:last-child {
@@ -43,6 +38,27 @@
     .-elv-slider-mark {
       font-size: $elv-font-xxs;
     }
+  }
+}
+
+.track-container {
+  display: flex;
+
+  .track-canvas-container {
+    height: $track-height;
+    width: 100%;
+  }
+
+  canvas {
+    cursor: pointer;
+  }
+}
+
+.track-lane-audio {
+  height: $audio-track-height;
+
+  .track-canvas-container {
+    height: $audio-track-height;
   }
 }
 
@@ -69,6 +85,21 @@
 
 .track-label-clickable {
   cursor: pointer;
+}
+
+.track-toggle-options {
+  display: flex;
+  padding: 0 $elv-spacing-s $elv-spacing-xs;
+  width: 100%;
+}
+
+.track-button {
+  margin-right: $elv-spacing-xs;
+  width: 7rem;
+}
+
+.track-button-enabled {
+  background-color: $color-background-active;
 }
 
 $slider-height: 12px;
