--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -1,6 +1,6 @@
 $color-background: #131315;
-$color-background-video: #000;
 $color-background-active: #2c2a28;
+$color-background-black: #000;
 $color-foreground: #acacac;
 $color-text: #f0f0f0;
 $color-border: #3a3a3a;
