--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -13,6 +13,7 @@ $audio-track-height: 5rem;
   pointer-events: none;
   position: absolute;
   width: 4px;
+  z-index: 100;
 
   .track-time-handle {
     border-radius: 100%;
@@ -24,20 +25,37 @@ $audio-track-height: 5rem;
 }
 
 .track-lane {
-  border-bottom: 1px solid $color-border;
-  display: grid;
-  grid-template-columns: 13rem 1fr;
+  display: flex;
   height: $track-height;
-
-  &:first-child,
-  &:last-child {
-    border-bottom: 0;
-  }
 
   .-elv-slider {
     .-elv-slider-mark {
       font-size: $elv-font-xxs;
     }
+  }
+
+  &:last-child {
+    .track-lane-content {
+      border-bottom: 1px solid $color-border;
+    }
+  }
+}
+
+.track-lane-content {
+  background-color: $color-background-black;
+  border: 1px solid $color-border;
+  border-bottom: 0;
+  flex-grow: 1;
+  margin-right: $elv-spacing-m;
+}
+
+.video-scale-lane {
+  border: 0;
+  margin-top: 1px;
+
+  .track-lane-content {
+    background-color: inherit;
+    border: 0;
   }
 }
 
@@ -51,26 +69,32 @@ $audio-track-height: 5rem;
 
   canvas {
     cursor: pointer;
+    max-width: 100%;
   }
 }
 
 .track-lane-audio {
   height: $audio-track-height;
 
+  .track-lane-content {
+    background-color: $color-background-black;
+  }
+
   .track-canvas-container {
     height: $audio-track-height;
   }
 }
 
-.track-label {
+.track-label-container {
   @include elv-no-select;
   align-items: center;
   display: flex;
   font-size: $elv-font-m;
   height: 100%;
-  padding-left: $elv-spacing-s;
+  min-width: 12rem;
+  padding: $elv-spacing-s;
   position: relative;
-  width: 100%;
+  width: 12rem;
 
   .track-toggle {
     position: absolute;
@@ -89,7 +113,7 @@ $audio-track-height: 5rem;
 
 .track-toggle-options {
   display: flex;
-  padding: 0 $elv-spacing-s $elv-spacing-xs;
+  padding: 0 $elv-spacing-s $elv-spacing-s;
   width: 100%;
 }
 
@@ -103,11 +127,6 @@ $audio-track-height: 5rem;
 }
 
 $slider-height: 12px;
-
-.video-scale-lane {
-  border: 0;
-  margin-top: 1px;
-}
 
 .track-entry-timestamps,
 .track-entry-content {
