Improve performance of audio track rendering

--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -33,7 +33,7 @@
   .entries {
     flex-grow: 1;
     max-height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .entry-time-range {
