--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -1,7 +1,12 @@
 $track-height: 3rem;
 $audio-track-height: 5rem;
 
+.timeline {
+  padding-bottom: $elv-spacing-m;
+}
+
 .tracks-container {
+  margin: $elv-spacing-m 0;
   position: relative;
   width: 100%;
 }
@@ -30,7 +35,7 @@ $audio-track-height: 5rem;
 
   .-elv-slider {
     .-elv-slider-mark {
-      font-size: $elv-font-xxs;
+      font-size: $elv-font-xs;
     }
   }
 
@@ -111,19 +116,27 @@ $audio-track-height: 5rem;
   cursor: pointer;
 }
 
-.track-toggle-options {
+.timeline-actions {
   display: flex;
-  padding: 0 $elv-spacing-s $elv-spacing-s;
+  padding: 0 $elv-spacing-s;
   width: 100%;
-}
 
-.track-button {
-  margin-right: $elv-spacing-xs;
-  width: 7rem;
-}
+  button {
+    margin-right: $elv-spacing-xs;
+    width: 7rem;
 
-.track-button-enabled {
-  background-color: $color-background-active;
+    &:hover {
+      background-color: $color-accent;
+    }
+
+    &.enabled {
+      background-color: $color-background-active;
+
+      &:hover {
+        background-color: $color-accent-highlight;
+      }
+    }
+  }
 }
 
 $slider-height: 12px;
