--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -8,4 +8,5 @@ $color-border-active: #666;
 $color-rail: #464646;
 $color-rail-background: #000;
 $color-accent: #0c89c7;
+$color-accent-dark: #085d87;
 $color-accent-highlight: #0ea5ef;
