--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -40,6 +40,10 @@ $audio-track-height: 5rem;
   }
 
   &:last-child {
+    .track-label-container {
+      border-bottom: 1px solid $color-border;
+    }
+
     .track-lane-content {
       border-bottom: 1px solid $color-border;
     }
@@ -57,6 +61,10 @@ $audio-track-height: 5rem;
 .video-scale-lane {
   border: 0;
   margin-top: 1px;
+
+  .track-label-container {
+    border: 0;
+  }
 
   .track-lane-content {
     background-color: inherit;
@@ -93,6 +101,8 @@ $audio-track-height: 5rem;
 .track-label-container {
   @include elv-no-select;
   align-items: center;
+  border: 1px solid $color-border;
+  border-bottom: 0;
   display: flex;
   font-size: $elv-font-m;
   height: 100%;
@@ -108,12 +118,20 @@ $audio-track-height: 5rem;
   }
 }
 
-.track-label-selected {
-  background-color: $color-background-active;
-}
-
 .track-label-clickable {
   cursor: pointer;
+
+  &:hover {
+    background-color: $color-background-active;
+  }
+}
+
+.track-label-selected {
+  background-color: $color-accent;
+
+  &:hover {
+    background-color: $color-accent-highlight;
+  }
 }
 
 .timeline-actions {
