--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -1,5 +1,6 @@
 $track-height: 3rem;
 $audio-track-height: 5rem;
+$preview-track-height: 5rem;
 
 .timeline {
   padding-bottom: $elv-spacing-m;
@@ -98,11 +99,34 @@ $audio-track-height: 5rem;
   }
 }
 
+.track-lane-preview {
+  height: $preview-track-height;
+}
+
+.preview-frame {
+  display: flex;
+  flex: 1 1 auto;
+  height: $preview-track-height;
+  max-height: 100%;
+  overflow: hidden;
+  padding-bottom: 2px;
+
+  img {
+    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+  }
+}
+
 .track-label-container {
   @include elv-no-select;
   align-items: center;
   border: 1px solid $color-border;
   border-bottom: 0;
+  border-left: 0;
   display: flex;
   font-size: $elv-font-m;
   height: 100%;
