--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -5,6 +5,7 @@ $color-foreground: #acacac;
 $color-text: #f0f0f0;
 $color-border: #3a3a3a;
 $color-border-active: #666;
+$color-border-dark: #2a2a2a;
 $color-rail: #464646;
 $color-rail-background: #000;
 $color-accent: #0c89c7;
