Move keyboard controls info to modal ; Refactor video controls for better scaling

--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -72,8 +72,7 @@ header {
     }
 
     &.keyboard-controls-icon {
-      height: $elv-font-xxl;
-      margin-bottom: 2px;
+      height: 1.9rem;
 
       path {
         fill: $elv-color-darkgray;
