--- a/src/static/stylesheets/defaults.scss
+++ b/src/static/stylesheets/defaults.scss
@@ -3,11 +3,17 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: 14px;
   overflow-x: hidden;
 }
 
 @media screen and (min-width: 1000px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1500px) {
   html {
     font-size: 18px;
   }
@@ -186,7 +192,7 @@ button {
         }
       }
 
-      button {
+      .-elv-button {
         background-color: $color-accent;
         border: 1px solid $color-border;
         color: $color-text;
