--- a/src/static/stylesheets/keyboard-controls.scss
+++ b/src/static/stylesheets/keyboard-controls.scss
@@ -1,37 +1,53 @@
 .keyboard-control-info {
-  font-size: $elv-font-xxs;
-  min-width: 500px;
-  width: 500px;
+  font-size: $elv-font-s;
+  min-width: 25rem;
+  padding: $elv-spacing-s;
+  position: relative;
+
+  .close-button {
+    height: 1.2rem;
+    position: absolute;
+    right: $elv-spacing-xxs;
+    top: $elv-spacing-xxs;
+
+    svg {
+      stroke: $elv-color-lightgray;
+
+      &:hover {
+        stroke: $elv-color-white;
+      }
+    }
+  }
 
   h3 {
-    font-size: $elv-font-s;
-    padding: $elv-spacing-s 0 $elv-spacing-xs;
+    font-size: $elv-font-m;
+    font-weight: 500;
+    padding: $elv-spacing-s $elv-spacing-m $elv-spacing-s 0 ;
+    text-align: center;
+  }
+
+  label {
+    color: $elv-color-text-lightest;
+  }
+
+  .control-section {
+    margin-bottom: $elv-spacing-s;
   }
 
   .control-group {
-    align-items: center;
-    display: flex;
-    padding: $elv-spacing-xs 0;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    padding: $elv-spacing-xxs $elv-spacing-s;
+    width: 100%;
 
     &:not(:last-child) {
       border-bottom: 1px solid $elv-color-darkergray;
     }
+  }
 
-    .control-labels {
-      display: flex;
-      flex-direction: column;
-      width: 150px;
-    }
-
-    label {
-      color: $elv-color-text-lightest;
-    }
+  .control-labels {
+    padding-right: $elv-spacing-s;
+    text-align: center;
   }
 }
 
-.keyboard-controls-tooltip {
-  &.keyboard-controls-tooltip {
-    min-width: 500px;
-    padding-bottom: $elv-spacing-s;
-  }
-}
