Use exact frame rate from offering specification, if present

--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -154,7 +154,9 @@
 
     &:active,
     &:hover {
-      color: $color-accent;
+      &:not(:disabled) {
+        color: $color-accent;
+      }
     }
   }
 
