--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -11,4 +11,5 @@ $color-rail: #464646;
 $color-rail-background: #000;
 $color-accent: #0c89c7;
 $color-accent-dark: #085d87;
+$color-accent-seek-inactive: #031e2b;
 $color-accent-highlight: #0ea5ef;
