--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -18,6 +18,46 @@
     }
   }
 
+  .menu-page-controls {
+    align-items: center;
+    display: flex;
+    padding: 0 $elv-spacing-xs;
+
+    .current-page {
+      font-size: $elv-font-l;
+      padding: 0 $elv-spacing-xs;
+    }
+
+    button {
+      svg {
+        border-radius: 100%;
+        height: $elv-spacing-m;
+        stroke: $color-accent;
+        width: $elv-spacing-m;
+      }
+
+      &:hover {
+        svg {
+          stroke: $color-accent-highlight;
+        }
+      }
+    }
+  }
+
+  .menu-filter {
+    width: 100%;
+
+    input {
+      background: $color-background-active;
+      border: $color-border-active;
+      color: $color-foreground;
+      font-size: $elv-font-xl;
+      height: $elv-spacing-ml;
+      padding: 0 $elv-spacing-s;
+      width: 100%;
+    }
+  }
+
   h4 {
     align-items: center;
     display: flex;
