Improve performance of overlay tags ; Automatically scroll down to current entry when entry list is loaded

--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -58,8 +58,10 @@
 
   .entries {
     flex-grow: 1;
+    margin-right: $elv-spacing-mxs;
     max-height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
+    position: relative;
   }
 
   .entry-time-range {
