--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -58,6 +58,15 @@
     }
   }
 
+  .menu-video-filter {
+    display: flex;
+
+    button {
+      flex: 1 1 0;
+      max-width: unset;
+    }
+  }
+
   h4 {
     align-items: center;
     display: flex;
