--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -211,6 +211,10 @@
       background-color: $color-foreground;
     }
 
+    .-elv-slider {
+      background-color: $color-background;
+    }
+
     .-elv-slider-handle {
       background-color: transparent;
     }
