Add button to save the current frame as an image

--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -146,6 +146,14 @@
         stroke: none;
       }
     }
+
+    &.video-control-save-frame {
+      svg {
+        fill: transparent;
+        stroke: $color-foreground;
+        stroke-width: 1.5px;
+      }
+    }
   }
 
   select {
