--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -56,6 +56,12 @@
       padding: 0 $elv-spacing-s;
       width: 100%;
     }
+
+    &.content-lookup {
+      input {
+        font-size: $elv-font-l;
+      }
+    }
   }
 
   .menu-video-filter {
